# tiny-mcp

./: .env.example  .gitignore  README.md  mcp_chatbot_main.py  mcp_client.py  mcp_client_main.py  pyproject.toml  sample_mcp_client.py  simple_mcp_client.py  simple_mcp_client_stream.py
config/: mcp_config.json  server_config.json  server_config2.json
docs/: 1.MCP基础知识.md  2.MCP基本使用（Cherry Studio）.md  3.Cline & MCP配置.md  4.MCP规范协议.md  5.MCP Server开发调试.md  6.MCP核心交互流程.md  7.MCP Client交互流程.md
docs/prompt/: client_prompt.txt  server_prompt.txt
mcp_chatbot/: __init__.py  chat_session.py  llm_service.py  mcp_server.py
mcp_chatbot/chat/: chat_session.py
mcp_chatbot/config/: configuration.py
mcp_chatbot/llm/: llm_service.py
mcp_chatbot/mcp/: mcp_client.py  mcp_tool.py
mcp_client/: chatbot_config.py
services/: .env.example  res_prompt_services.py  time_service.py  time_service_sse.py  weather_service_us.py  weather_service_zh.py
